--- a/File_handling.ipynb
+++ b/File_handling.ipynb
@@ -16,17 +16,9 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aXEIcuP11o6G"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
+        "# Files, exceptional handling, logging and memory management Questions\n",
         "**1. What is the difference between interpreted and compiled languages?**\n",
         "* Interpreted languages: Execute instructions directly without compiling to\n",
         "machine-level code. (e.g., Python, JavaScript)\n",
